--- a/more-sundials-examples/cvode/simple-OpenMP-example/Makefile
+++ b/more-sundials-examples/cvode/simple-OpenMP-example/Makefile
@@ -18,7 +18,7 @@ DCOMPILE_FLAGS = -D DEBUG
 # Add additional include paths
 INCLUDES = -I $()
 # General linker settings
-LINK_FLAGS = -lsundials_cvode -lsundials_nvecserial
+LINK_FLAGS = -lsundials_cvode -lsundials_nvecopenmp -fopenmp
 # Additional release-specific linker settings
 RLINK_FLAGS =
 # Additional debug-specific linker settings
